# My_Lenet

./: CMakeLists.txt  lenet5.wts
include/: trt_inference.hpp
src/: main.cpp  trt_inference.cpp
